# Nano_Server

./: build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/administrator/nano_server/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/administrator/nano_server/: AudioTask.java  CameraPreview.java  MainActivity.java
app/src/main/jni/: nano_opensles.cpp
app/src/main/jni/include/: com_example_administrator_nano_server_MainActivity.h  log.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/administrator/nano_server/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
remoteserver/: CMakeLists.txt  build.gradle  proguard-rules.pro
remoteserver/release/: output.json
remoteserver/src/main/: AndroidManifest.xml
remoteserver/src/main/java/com/cmcc/media/hfp/aidl/: RemoteService.java
remoteserver/src/main/jni/: RemoteServiceJNI.c  nano_socket.c  socket_local_client.c  socket_local_server.c
remoteserver/src/main/jni/include/: com_cmcc_media_hfp_aidl_RemoteService.h  jb_types.h  nano_socket.h  socket_local.h  sockets.h
remoteserver/src/main/res/layout/: activity_remoteserver.xml
remoteserver/src/main/res/values/: strings.xml
remoteservicecontract/: build.gradle  proguard-rules.pro
remoteservicecontract/src/main/: AndroidManifest.xml
remoteservicecontract/src/main/aidl/com/cmcc/media/hfp/aidl/: ITelephone.aidl  ITelephoneCallback.aidl
remoteservicecontract/src/main/res/values/: strings.xml
